Changed the theme of the launcher progress bar to have color accent

--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -44,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:theme="@style/ProgressBarTheme"
             android:visibility="gone"/>
 
         <TextView
