--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#4CAF50</color>
     <color name="colorPrimaryDark">#388E3C</color>
     <color name="colorAccent">#FFAB40</color>
+    <color name="lightGray">#43000000</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
