--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#388E3C</color>
     <color name="colorAccent">#FFAB40</color>
     <color name="lightGray">#43000000</color>
+    <color name="veryLightGray">#11000000</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
