--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -4,10 +4,11 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
+                android:background="@drawable/comment_background"
                 android:clickable="true"
                 android:orientation="vertical"
-                android:padding="8dp">
+                android:padding="8dp"
+                android:stateListAnimator="@animator/comment_selection">
 
     <TextView
         android:id="@+id/note_date_text_view"
