--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -15,10 +15,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:padding="4dp"
+        android:text="@string/No_activity"
         android:textAllCaps="true"
         android:textColor="@color/lightGray"
-        android:textSize="12sp"
-        tools:text="3 hours ago"/>
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/user_nickname_text_view"
