--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/note_layout"
-                xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/comment_background"
+                android:background="@drawable/white_when_activated"
                 android:clickable="true"
                 android:orientation="vertical"
                 android:padding="8dp"
-                android:stateListAnimator="@animator/comment_selection">
+                android:stateListAnimator="@animator/raise_when_activated">
 
     <TextView
         android:id="@+id/note_date_text_view"
