--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/user_layout"
-                xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
+                android:background="@drawable/white_when_pressed"
                 android:clickable="true"
                 android:orientation="vertical"
-                android:padding="8dp">
+                android:padding="8dp"
+                android:stateListAnimator="@animator/raise_when_pressed">
+
+    <TextView
+        android:id="@+id/user_nickname_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:padding="4dp"
+        android:textAllCaps="true"
+        android:textColor="@color/colorAccent"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:transitionName="user_nickname"
+        tools:text="Goui"/>
 
     <TextView
         android:id="@+id/user_last_activity_text_view"
@@ -19,19 +32,6 @@
         android:textAllCaps="true"
         android:textColor="@color/lightGray"
         android:textSize="12sp"/>
-
-    <TextView
-        android:id="@+id/user_nickname_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@id/user_last_activity_text_view"
-        android:padding="4dp"
-        android:textAllCaps="true"
-        android:textColor="@color/colorAccent"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        tools:text="Goui"/>
 
     <TextView
         android:id="@+id/user_nb_of_notes_text_view"
