--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -9,17 +9,27 @@
                 android:padding="8dp"
                 android:stateListAnimator="@animator/raise_when_pressed">
 
+    <ImageView
+        android:id="@+id/user_avatar_image_view"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="4dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_avatar"
+        android:transitionName="user_avatar"/>
+
     <TextView
         android:id="@+id/user_nickname_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_marginTop="2dp"
+        android:layout_toRightOf="@id/user_avatar_image_view"
         android:padding="4dp"
         android:textAllCaps="true"
         android:textColor="@color/colorAccent"
         android:textSize="12sp"
         android:textStyle="bold"
-        android:transitionName="user_nickname"
         tools:text="Goui"/>
 
     <TextView
@@ -27,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="2dp"
         android:padding="4dp"
         android:text="@string/No_activity"
         android:textAllCaps="true"
@@ -38,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/user_nickname_text_view"
+        android:layout_toRightOf="@id/user_avatar_image_view"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:text="@string/Zero_notes"/>
